@@ -1480,7 +1480,7 @@ PKL_PHASE_END_HANDLER
 
 PKL_PHASE_BEGIN_HANDLER (pkl_trans1_pr_try_stmt_handler)
 {
-  if (PKL_TRANS_ESCAPABLE)
+  if (PKL_AST_TRY_STMT_ARG (PKL_PASS_PARENT) && PKL_TRANS_ESCAPABLE)
     PKL_TRANS_ESCAPABLE->nframes++;
 }
 PKL_PHASE_END_HANDLER
@@ -1489,7 +1489,7 @@ PKL_PHASE_END_HANDLER
 
 PKL_PHASE_BEGIN_HANDLER (pkl_trans1_ps_try_stmt_handler)
 {
-  if (PKL_TRANS_ESCAPABLE)
+  if (PKL_AST_TRY_STMT_ARG (PKL_PASS_PARENT) && PKL_TRANS_ESCAPABLE)
     PKL_TRANS_ESCAPABLE->nframes--;
 }
 PKL_PHASE_END_HANDLER
