@@ -1094,6 +1094,9 @@ EXTRA_DIST = \
   poke.pkl/break-while-1.pk \
   poke.pkl/break-while-2.pk \
   poke.pkl/break-while-3.pk \
+  poke.pkl/break-while-4.pk \
+  poke.pkl/break-while-5.pk \
+  poke.pkl/break-while-6.pk \
   poke.pkl/builtins-1.pk \
   poke.pkl/cast-any-to-function-diag-1.pk \
   poke.pkl/cast-array-1.pk \
