@@ -1,0 +1,8 @@
+/* { dg-do run } */
+
+var a = 10;
+while (1) try { raise E_generic; } catch if E_generic { break; }
+printf "%v\n", a;
+
+/* { dg-command {.set obase 10} } */
+/* { dg-output "10" } */
